--- a/xxl-job-admin/values.yaml
+++ b/xxl-job-admin/values.yaml
@@ -84,4 +84,4 @@ tolerations: []
 
 affinity: {}
 
-appConfig: "--spring.datasource.url=jdbc:mysql://mysql:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai --spring.datasource.username=root --spring.datasource.password=2AtZsyzoH4"
+appConfig: ""
